updating logic for plugins
